SWWEB-1580 fix forgot password shift

--- a/softWrench.sW4.Web/Content/styles/default/_page-signin.scss
+++ b/softWrench.sW4.Web/Content/styles/default/_page-signin.scss
@@ -12,7 +12,6 @@
     .form-signin {
         padding: 40px 15px;
         background-color: rgba(1, 62, 91, 0.5);
-        min-height: 580px;
 
         .logo {
             text-align: center;
@@ -50,7 +49,7 @@
         }
 
         .forgotpasswordform {
-            margin-bottom: 58px;
+            margin-bottom: 54px;
         }
 
         .control-label {
